--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <meta name="twitter:title" content="암보험추천"/>
 <meta name="twitter:url" content="/"/>
 <meta name="twitter:image" content="https://financial.pstatic.net/insurance/insurance_car.png"/>
+<meta name="google-site-verification" content="Y5z1XcXlAiHE97jnoA5KsJkgvc68maMzHmCA6Mm49_8" />
+<meta name="naver-site-verification" content="1c6c99aa3127b3cee513be0c8ac20123f7cc1e6f" />
 
-
+	
 <meta name="subject" content="암보험추천" />
 <meta name="publisher" content="암보험추천" />
 <meta name="Other Agent" content="암보험추천" />
@@ -846,3 +848,4 @@
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" data-bootloader-hash="qgmbN7Z" async="1" crossorigin="anonymous" data-p=":74" data-btmanifest="1027280358_main" data-c="1"></script>
 </body>
 </html>
+
